связывание конфигов начало

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,6 +8,10 @@ $baseGrid: 8px;
 
 // colors
 
+$theme_primary: #0099dc;
+$background_color_primary: #fff;
+$theme_accent_secondary: #007ab0;
+
 $header_primary: #2B2A29;
 
 $text_color_primary: #494949;
